# cmis_calculate_srs

./: .gitignore  README.md  pyproject.toml
config/: ethiraj2004_config.yaml  example_config.yaml  example_ordinal_config.yaml  lazer2007_config.yaml  levinthal1997_config.yaml  logging.yaml
data/game_tables/ethiraj2004/: ethiraj2004_002.csv
data/game_tables/lazer2007/: lazer2007_008.csv  lazer2007_009.csv
data/samples/: small_game.csv  small_game_ordinal.csv
data/schema/: game_table_schema.json
docs/: 01_game_table_spec.md  02_internal_model.md  03_indices_overview.md  04_cli_usage.md  05_game_table_management.md  index.md
outputs/data/samples/small_game/: coalitions.csv  individuals.csv
src/contrib_metrics/: cli.py  config_loader.py
src/contrib_metrics/aggregation/: axioms.py  reporting.py  run_manager.py  stats.py  visualization.py
src/contrib_metrics/aggregation/axioms/: __init__.py  sada.py  swimmy.py
src/contrib_metrics/indices/: banzhaf.py  group_values.py  interactions.py  ordinal.py  shapley.py  synergy.py
src/contrib_metrics/io/: game_table_manager.py  readers.py  validators.py  writers.py
src/contrib_metrics/model/: game.py  game_types.py  transforms.py
src/contrib_metrics/utils/: coalition_encoding.py  logging_utils.py
tests/: test_cli.py  test_io.py  test_shapley.py
